Had a ton of fun finishing The Style. Still a couple of things need to be fixed. Gonna add interactive map and barbershop creation tomorrow. Auth will stay the same. Won't touch it.

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -9,7 +9,15 @@
 
 <MudLayout>
     <NavMenu NotificationCount="@notificationCount"></NavMenu>
-    <MudMainContent>
+    <MudMainContent Style=
+"background-color: white;
+background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0.1) 2px,
+    rgba(255, 255, 255, 1) 2px
+);
+background-size: 20px 100%;
+">
         @Body
     </MudMainContent>
 </MudLayout>
