--- a/Components/Pages/PhoneOrderPlacement.razor
+++ b/Components/Pages/PhoneOrderPlacement.razor
@@ -9,7 +9,7 @@
 @*<MudPopoverProvider></MudPopoverProvider>*@
 <MudDialogProvider></MudDialogProvider>
 
-<MudPaper Class="mt-4">
+<MudPaper Class="pa-4">
     <MudContainer Style="margin-bottom: 12px; border-radius: 0.5rem; border: 1px solid black; width: 80%;">
         <MudStack Class="mt-4 mb-4" Row="true" AlignItems="AlignItems.Center">
             <MudText>Адрес: </MudText>
