--- a/Components/Pages/Profile.razor
+++ b/Components/Pages/Profile.razor
@@ -150,9 +150,10 @@ else
 
             <MudDivider Class="my-4" />
 
-            <MudPaper Class="p-6">
+            <MudPaper Class="p-6 pa-4">
                 <MudStack Spacing="3">
                     <MudText Typo="Typo.h4">Отзывы</MudText>
+                    <MudDivider Class=""></MudDivider>
                     <AuthorizeView>
                         <MudExpansionPanel Text="Оставить отзыв" @ref="reviewPanel">
                             <MudPaper Class="pa-4" Style="border: 1px solid black;">
