--- a/Components/Pages/ReviewsForBarber.razor
+++ b/Components/Pages/ReviewsForBarber.razor
@@ -10,7 +10,7 @@
 {
     @foreach (var r in ReviewList)
     {
-        <MudCard Class="mb-3 mx-2" Style="border: 1px solid black;">
+        <MudCard Class="mb-3" Style="border: 1px solid black;">
             <MudCardContent>
                 <MudStack Spacing="1">
                     <MudStack AlignItems="AlignItems.Start" Spacing="2">
