--- a/Components/Routes.razor
+++ b/Components/Routes.razor
@@ -18,7 +18,9 @@
         PaletteLight = new PaletteLight()
         {
             Primary = new MudColor("#050517"),
-            Secondary = new MudColor("#020122")
+            Secondary = new MudColor("#020122"),
+            Success = new MudColor("#1F706B"),
+            Info = new MudColor("#14385E")
         },
     };
 }
