--- a/Components/Pages/BarbershopPage.razor
+++ b/Components/Pages/BarbershopPage.razor
@@ -2,9 +2,13 @@
 @page "/barbershop/{Id:int}"
 @rendermode InteractiveServer
 @using barberchainAPI.Functional
+@using System.Collections.Generic;
 @inject NavigationManager Navigation
 @inject BarberchainDbContext Context
 @inject CartService CartService
+@inject IDialogService DialogService
+
+<MudDialogProvider></MudDialogProvider>
 
 @using barberchainAPI.Data  <!-- Namespace with Barbershop model -->
 @using MudBlazor
@@ -15,91 +19,93 @@
 }
 else
 {
-    <MudContainer Style="max-width:800px;" Class="mx-auto mt-4">
-        <MudPaper Class="pa-4">
+    <MudPaper Class="mt-8 pa-4 mx-auto" Style="max-width: 900px; border: 1px solid black;">
 
-            @if (Barbershop == null)
-            {
-                <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
-            }
-            else
-            {
-                <MudGrid>
-                    <MudItem xs="12" sm="6">
-                        <!-- Map placeholder -->
-                        <MudPaper Class="pa-2" Style="height:200px; display:flex; align-items:center; justify-content:center; background:#eee;">
-                            Map placeholder
-                        </MudPaper>
-                    </MudItem>
-                    <MudItem xs="12" sm="6">
-                        <MudText Typo="Typo.h4">@Barbershop.Address</MudText>
-                        <MudText Typo="Typo.subtitle1">📞 @Barbershop.Phone</MudText>
-                        <MudText Typo="Typo.subtitle2">
-                            🕒 @(oh < 10 ? "0" + oh : oh):@(om < 10 ? "0" + om : om) - @(ch < 10 ? "0" + ch : ch):@(cm < 10 ? "0" + cm : cm)
-                        </MudText>
-                    </MudItem>
-                </MudGrid>
+        @if (Barbershop == null)
+        {
+            <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
+        }
+        else
+        {
+            <MudGrid>
+                <MudItem xs="12" sm="6">
+                    <!-- Map placeholder -->
+                    <MudPaper Class="pa-2" Style="height:200px; display:flex; align-items:center; justify-content:center; background:#eee;">
+                        Map placeholder
+                    </MudPaper>
+                </MudItem>
+                <MudItem xs="12" sm="6">
+                    <MudText Typo="Typo.h4">@Barbershop.Address</MudText>
+                    <MudText Typo="Typo.subtitle1">📞 @Barbershop.Phone</MudText>
+                    <MudText Typo="Typo.subtitle2">
+                        🕒 @(oh < 10 ? "0" + oh : oh):@(om < 10 ? "0" + om : om) - @(ch < 10 ? "0" + ch : ch):@(cm < 10 ? "0" + cm : cm)
+                    </MudText>
+                </MudItem>
+            </MudGrid>
 
-                <MudDivider Class="my-4" />
+            <MudDivider Class="my-4" />
 
-                <MudText Typo="Typo.h5" Class="mb-2 d-flex">Услуги</MudText>
-                <MudList T="string" Class="d-flex flex-wrap">
-                    @foreach (var job in Service)
-                    {
-                        <MudContainer Class="d-flex mb-4" Style="align-items:center;">
-                            <MudListItem Text=@job.Name />
-                            @if (cart != null)
-                            {
-                                <MudButton @onclick="async () => { await OnServiceClicked(job); }" Style=@($"background:{(cart.JobSet.Contains(job) ? "gray" : job.ColorCSS)}; height:min-content;")>@(cart.JobSet.Contains(job) ? "Добавлено" : "")</MudButton>
-                            }
-                        </MudContainer>
-                    }
-                </MudList>
-
-                <MudDivider Class="my-4" />
-
-                <MudText Typo="Typo.h5" Class="mb-2">Barbers</MudText>
-                <MudGrid>
-                    @foreach (var barber in Barbershop.Barbers)
-                    {
-                        @if (cart != null && barber.BarberJobs.Select(bj => bj.Job).ToHashSet().IsSupersetOf(cart.JobSet))
+            <MudText Typo="Typo.h5" Class="mb-2 d-flex">Услуги</MudText>
+            <MudList T="string" Class="d-flex flex-wrap">
+                @foreach (var job in Service)
+                {
+                    <MudContainer Class="d-flex mb-4" Style="align-items:center;">
+                        <MudListItem Text=@job.Name />
+                        @if (cart != null)
                         {
-                            <MudItem xs="12" sm="6" md="4">
-                                <MudCard>
-                                    <MudCardContent>
-                                        <MudText Typo="Typo.subtitle1">@barber.Account.Lastname @barber.Account.Restname</MudText>
-                                        <a href=@($"/account/{barber.AccountId}")>
-                                            <MudImage Src="@AccountPage.GetImageSrc(barber.Account.ProfilePic)" Alt="Barber profile pic" Class="rounded" ObjectFit="ObjectFit.Cover" Style="width:100%;height:auto;" />
-                                        </a>
-                                    </MudCardContent>
-                                </MudCard>
-                            </MudItem>
+                            <MudButton @onclick="async () => { await OnServiceClicked(job); }" Style=@($"background:{(cart.JobSet.Contains(job) ? "gray" : job.ColorCSS)}; height:min-content;")>@(cart.JobSet.Contains(job) ? "Добавлено" : "")</MudButton>
                         }
-                    }
-                </MudGrid>
+                    </MudContainer>
+                }
+            </MudList>
 
-                <MudDivider Class="my-4" />
+            <MudDivider Class="my-4" />
 
-                <MudText Typo="Typo.h5" Class="mb-2">Gallery</MudText>
-                <MudGrid>
-                    @foreach (var image in Barbershop.Images)
+            <MudText Typo="Typo.h5" Class="mb-2">Сотрудники</MudText>
+            <MudGrid>
+                @foreach (var barber in Barbershop.Barbers)
+                {
+                    @if (cart != null && barber.BarberJobs.Select(bj => bj.Job).ToHashSet().IsSupersetOf(cart.JobSet))
                     {
-                        <MudItem xs="6" sm="4" md="3">
-                            <MudPaper Elevation="1" Class="pa-1">
-                                <MudImage Src="@AccountPage.GetImageSrc(image.ImgFile)" Alt="Auxiliary image" Style="width:100%;height:auto;" />
-                            </MudPaper>
+                        <MudItem xs="12" sm="6" md="4">
+                            <MudCard Style="border: 1px solid black;">
+                                <MudCardContent>
+                                    <MudText Typo="Typo.subtitle1">@barber.Account.Lastname @barber.Account.Restname</MudText>
+                                    <a href=@($"/account/{barber.AccountId}")>
+                                        <MudImage Src="@AccountPage.GetImageSrc(barber.Account.ProfilePic)" Alt="Barber profile pic" ObjectFit="ObjectFit.Cover" Style="width:100%;height:auto;" />
+                                    </a>
+                                </MudCardContent>
+                            </MudCard>
                         </MudItem>
                     }
-                </MudGrid>
-            }
-        </MudPaper>
-    </MudContainer>
+                }
+            </MudGrid>
+
+            <MudDivider Class="my-4" />
+
+            <MudText Typo="Typo.h5" Class="mb-2">Галерея</MudText>
+            <MudGrid>
+                @for (int i = 0; i < Barbershop.Images.Count; i++)
+                {
+                    var image = Barbershop.Images.ElementAt(i);
+
+                    <MudItem xs="6" sm="4" md="3">
+                        <MudImage @onclick="() => OpenGallery(i)" Src="@AccountPage.GetImageSrc(image.ImgFile)"
+                                    Alt="Auxiliary image"
+                                    Style="width:200px; height:200px; cursor:pointer; box-shadow: 0 0 20px rgba(0,0,0,0.5);"
+                                    ObjectFit="ObjectFit.Cover
+                                    "/>
+                    </MudItem>
+                }
+            </MudGrid>
+        }
+    </MudPaper>
 }
 @code {
     [Parameter] public int Id { get; set; }
-    private Barbershop? Barbershop { get; set; }
+    private Barbershop? Barbershop { get; set; } = default!;
 
-    private List<Job>? Service { get; set; } = new List<Job>();
+    private HashSet<Job> Service { get; set; } = new HashSet<Job>();
 
     private int oh, om, ch, cm;
 
@@ -126,7 +132,7 @@ else
             int openingBit = -1;
             for (int i = 0; i < 96; i++)
             {
-                if (Barbershop.DefaultSchedule[i]) // BitArray or bool[]
+                if (Barbershop!.DefaultSchedule[i]) // BitArray or bool[]
                 {
                     openingBit = i;
                     break;
@@ -148,7 +154,7 @@ else
             int closingBit = -1;
             for (int i = 95; i >= 0; i--)
             {
-                if (Barbershop.DefaultSchedule[i])
+                if (Barbershop!.DefaultSchedule[i])
                 {
                     closingBit = i;
                     break;
@@ -170,13 +176,13 @@ else
 
 
             var jobIdSet = new HashSet<int>();
-            foreach (var b in Barbershop.Barbers)
+            foreach (var b in Barbershop!.Barbers)
             {
                 jobIdSet = await Context.BarberJobs.Where(bj => b.Id == bj.BarberId).Select(bj => bj.JobId).ToHashSetAsync();
 
                 foreach (var id in jobIdSet)
                 {
-                    Service.Add(await Context.Jobs.Where(j => j.Id == id).FirstOrDefaultAsync());
+                    Service!.Add((await Context.Jobs.Where(j => j.Id == id).FirstOrDefaultAsync())!);
                 }
             }
         }
@@ -199,7 +205,7 @@ else
 
     private async Task OnServiceClicked(Job j)
     {
-        if (cart.JobSet.Contains(j))
+        if (cart!.JobSet.Contains(j))
         {
             await CartService.RemoveItem(j.Id);
         }
@@ -211,5 +217,25 @@ else
         cart = await CartService.GetCart(); // update the cart
 
         StateHasChanged();
+    }
+
+    private async Task OpenGallery(int index)
+    {
+        var parameters = new DialogParameters<ImageGalleryDialog>
+        {
+            { x => x.StartIndex, index },
+            { x => x.Images, Barbershop!.Images.Select(i => i.ImgFile).ToList() }
+        };
+
+        var options = new DialogOptions
+        {
+            MaxWidth = MaxWidth.Large,
+            FullWidth = true,
+            CloseButton = false,
+            NoHeader = true,
+            BackgroundClass = "noshadow"
+        };
+
+        await DialogService.ShowAsync<ImageGalleryDialog>("", parameters, options);
     }
 }
