--- a/Components/Pages/Notifications.razor
+++ b/Components/Pages/Notifications.razor
@@ -3,13 +3,14 @@
 
 @if (NotificationList?.Count > 0)
 {
-    <MudPaper Elevation="3" Class="p-4 rounded-lg">
+    <MudPaper Class="p-4 pa-4">
         <MudStack Spacing="2">
             <MudText Typo="Typo.h5" Class="mb-2">Уведомления</MudText>
+            <MudDivider Class="mb-2" />
 
             @foreach (var n in NotificationList)
             {
-                <MudCard Class="@(n.IsViewed ? "notification-viewed mb-2" : "mb-2")"
+                <MudCard Style="border: 1px solid black;" Class="@(n.IsViewed ? "notification-viewed mb-2" : "mb-2")"
                          Elevation="2" @onmouseover="() => MarkViewedAsync(n)">
                     <MudCardContent>
                         <MudStack Spacing="1">
@@ -43,9 +44,9 @@
 }
 else
 {
-    <MudPaper Elevation="3" Class="p-4 rounded-lg" style="text-align:center;">
+    <MudPaper Class="p-4 pa-4" style="text-align:center;">
         <MudIcon Class="mt-4" Icon="@Icons.Material.Filled.NotificationsOff" Color="Color.Secondary" Size="Size.Large" />
-        <MudText Typo="Typo.h6" Class="mb-4 mt-2">Нет уведомлений</MudText>
+        <MudText Typo="Typo.h6" Class="mt-2">Нет уведомлений</MudText>
     </MudPaper>
 }
 
