--- a/Components/Pages/Reviews.razor
+++ b/Components/Pages/Reviews.razor
@@ -11,14 +11,14 @@
 
 @if (ReviewList?.Count > 0)
 {
-    <MudPaper Class="p-6">
+    <MudPaper Class="p-6 pa-4">
         <MudStack Spacing="3">
             <MudText Typo="Typo.h4">Мои отзывы</MudText>
             <MudDivider Class="mb-2" />
 
             @foreach (var r in ReviewList)
             {
-                <MudCard Elevation="2" Class="mb-3">
+                <MudCard Class="mb-3" Style="border: 1px solid black;">
                     <MudCardContent>
                         <MudStack Spacing="1">
                             <MudStack Direction="Row" AlignItems="AlignItems.Start" Spacing="2">
@@ -54,7 +54,7 @@
 }
 else
 {
-    <MudPaper Elevation="3" Class="p-4 rounded-lg" Style="text-align:center;">
+    <MudPaper Elevation="3" Class="py-4 p-4" Style="text-align:center;">
         <MudIcon Class="mt-4" Icon="@Icons.Material.Filled.Reviews" Color="Color.Secondary" Size="Size.Large" />
         <MudText Typo="Typo.h6" Class="mt-2">Нет отзывов</MudText>
         <MudText Class="mb-4" Typo="Typo.body2">Вы ещё не оставили отзывов о сотрудниках</MudText>
