--- a/Components/App.razor
+++ b/Components/App.razor
@@ -16,6 +16,7 @@
     <link href="_content/MudBlazor/MudBlazor.min.css?v=@(MudBlazor.Metadata.Version)" rel="stylesheet" />
     <link rel="stylesheet" href="barberchainAPI.styles.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <component type="typeof(App)" render-mode="Server" />
     <HeadOutlet />
@@ -25,6 +26,8 @@
     <Routes />
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js?v=@(MudBlazor.Metadata.Version)"></script>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <script src="map.js"></script>
     <script src="auth.js"></script>
     <script src="localStorageHelper.js"></script>
     <script src="timeline.js"></script>
