--- a/wwwroot/style.css
+++ b/wwwroot/style.css
@@ -4,14 +4,18 @@
 }
 
 html, body {
-    height: 100% !important;
+    min-height: 100vh !important;
+    height: max-content !important;
     margin: 0 !important;
 }
 
 .mud-layout {
-    height: 100% !important;
+    min-height: 100vh !important;
+    height: max-content !important;
 }
 
 .mud-main-content {
-    height: 100% !important;
+    min-height: 100vh !important;
+    height: max-content !important;
+    padding-bottom: 32px;
 }
